--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
     "mongoose-bcrypt": "^1.11.0",
-    "mysql2": "^3.11.0",
-    "nodemon": "^3.1.4"
+    "mysql2": "^3.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
